# Depth_Estimation_PointCloud

./: .gitignore  README.md  app.py  pyproject.toml
examples/: create_sample_images.py  download_sample_data.py  run_benchmark.py  smart_demo.py
outputs/benchmarks/: benchmark_results.csv  benchmark_summary.md
outputs/demo_results/: demo_1_checkerboard_pattern_pointcloud.ply  demo_2_geometric_shapes_pointcloud.ply  demo_3_circular_pattern_pointcloud.ply  demo_4_gradient_pattern_pointcloud.ply  demo_5_street_scene_pointcloud.ply  pointcloud_test_camera_intrinsics.txt  pointcloud_test_downsampled.ply
scripts/: download_models.py
src/: about.py  depth_estimator.py  model_benchmarker.py  pointcloud_generator.py  video_app_component.py  video_depth_processor.py
src/components/: point_cloud_component.py
src/depth_estimation_pointcloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
